# zumcoin-crypto

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: CryptoTypes.h  StringTools.h  Varint.h  blake256.h  chacha8.h  crypto-ops.h  crypto.h  groestl.h  groestl_tables.h  hash-ops.h  hash.h  int-util.h  jh.h  keccak.h  oaes_config.h  oaes_lib.h  random.h  skein.h  skein_port.h
src/: StringTools.cpp  aesb.c  blake256.c  chacha8.c  crypto-ops-data.c  crypto-ops.c  crypto.cpp  groestl.c  hash-extra-blake.c  hash-extra-groestl.c  hash-extra-jh.c  hash-extra-skein.c  hash.c  jh.c  keccak.c  oaes_lib.c  random.cpp  skein.c  slow-hash.c  tree-hash.c
